# fake_store

./: 404.html  README.md  app.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml
dags/: carts_ingestion_dag.py  data_extractor_dag.py  gold_ingestion_dag.py  silver_ingestion_dag.py
data/gold/: fake_store_gold.db
data/marts/: user_cart_insights.csv
data/silver/: fake_store.db
data_extractor/: index.html
docs/: data_extractor.md  find_recent_data.md  index.md  models.md  raw.md
docs/gold/: gold.md  gold_data_extract.md  gold_database.md  gold_insights_ingestion.md
docs/raw/: raw.md
docs/silver/: silver.md  silver_cart_ingestion.md  silver_category_ingestion.md  silver_database.md  silver_products_ingestion.md  silver_user_ingestion.md
fake_store/: data_extractor.py  find_recent_data.py  gold_data_extract.py  gold_database.py  gold_insights_ingestion.py  models.py  silver_carts_ingestion.py  silver_categories_ingestion.py  silver_database.py  silver_products_ingestion.py  silver_user_ingestion.py
find_recent_data/: index.html
gold/gold/: index.html
gold/gold_data_extract/: index.html
gold/gold_database/: index.html
gold/gold_insights_ingestion/: index.html
models/: index.html
raw/raw/: index.html
search/: search_index.json
silver/silver/: index.html
silver/silver_cart_ingestion/: index.html
silver/silver_category_ingestion/: index.html
silver/silver_database/: index.html
silver/silver_products_ingestion/: index.html
stylesheets/: extra.css
tests/: test_models.py
(+5 files in other folders)
